Resume linked, file structures changed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           href="https://fonts.googleapis.com/css?family=Share+Tech+Mono"
           rel="stylesheet"
         />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./assets/style.css"/>
         <title>Jun's Portfolio</title>
   </head>
 
@@ -41,7 +41,7 @@
           <li class="active"><a href="#home" class="hash"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
           <li><a href="#about" class="hash"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
           <li><a href="#portfolio" class="hash"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Works</a></li>
-          <li><a href="#links" class="hash"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Links</a></li>
+          <li><a href="./download/JunPark_Resume.PDF" download><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Resume</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -182,6 +182,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
