--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="active"><a href="#home" class="hash"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
           <li><a href="#about" class="hash"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
           <li><a href="#portfolio" class="hash"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Works</a></li>
-          <li><a href="./download/JunPark_Resume.PDF" download><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Resume</a></li>
+          <li><a href="./download/JunParkResume.PDF" download><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Resume</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
