Footer font color changed

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <div class="col-sm-8 ">
           <h2 class="text-primary stm-font">Bio</h2>
-          <p>A continuing </p>
+          <p>An always happy, passionate full stack web developer with the forever buddy, Zzangu.</p>
           <h2 class="text-primary stm-font">Skills</h2>
           <p><strong>Web Developing:</strong> HTML, CSS, JavaScript, jQuery, Bootstrap, Node.js, MySQL</p>
           <p><strong>Machine Learning:</strong> Python, MATLAB</p>
