--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://github.com/zzangu0215" target="_blank" title="my Website"><img src="./images/jun_logo.jpg" alt="Jun Logo" /></a>
+        <a class="navbar-brand" href="https://github.com/zzangu0215" target="_blank" title="my Website"><img src="./images/jun_logo.jpg" alt="Jun's Logo" /></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -103,7 +103,7 @@
         </div>
         <div class="col-sm-8 ">
           <h2 class="text-primary stm-font">Bio</h2>
-          <p>An always happy, passionate full stack web developer with the forever buddy, Zzangu.</p>
+          <p>A full stack developer passionate about programing and technological development. I am looking forward to applying my knowledge, problem solving and creativity to create entertaining and easily accessible website!</p>
           <h2 class="text-primary stm-font">Skills</h2>
           <p><strong>Web Developing:</strong> HTML, CSS, JavaScript, jQuery, Bootstrap, Node.js, MySQL</p>
           <p><strong>Machine Learning:</strong> Python, MATLAB</p>
@@ -112,7 +112,7 @@
       </div>
       </section>
       <section id="portfolio" class="main-nav"><!--start portfolio-->
-      <h1><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Works</h1>
+      <h1><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Projects & Works</h1>
       <div class="row"><!---start row-->
 
         <div class="col-sm-6 col-md-4"><!--start element 1-->
