--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="col-sm-4 hidden-xs">
             <div class="well shadow up-hover color-hover">
               <h1><i class="fa fa-lightbulb-o"></i></h1>
-              <h2>Creativeness</h2>
+              <h2>Creative</h2>
             </div>	
           </div>
           <div class="col-sm-4 hidden-xs">
