Projects links changed due to repository name changed

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
           <div class="thumbnail shadow up-hover">
             <img src="./images/weather_dashboard.PNG"/> 
             <div class="cust-caption">
-              <a href="https://zzangu0215.github.io/BootCamp-Homework6-Weather_Dashboard/"><h3 class="stm-font">Weather Dashboard</h3></a>
+              <a href="https://zzangu0215.github.io/Weather_Dashboard/"><h3 class="stm-font">Weather Dashboard</h3></a>
               <p>Do you want to search weather for your favorite cities? Come to my <strong>Weather Dashboard</strong> to be a forecaster!</p>
-              <a href="https://github.com/zzangu0215/BootCamp-Homework6-Weather_Dashboard"><h4 class="stm-font">Github Repository</h4></a>
+              <a href="https://github.com/zzangu0215/Weather_Dashboard"><h4 class="stm-font">Github Repository</h4></a>
             </div>
           </div>
         </div><!--end element 2-->
@@ -141,9 +141,9 @@
           <div class="thumbnail shadow up-hover">
             <img src="./images/codequiz_challenge.PNG"/> 
             <div class="cust-caption">
-              <a href="https://zzangu0215.github.io/BootCamp-Homework4-Code_Quiz/"><h3 class="stm-font">Code Quiz Challenge</h3></a>
+              <a href="https://zzangu0215.github.io/Code_Quiz_Challenge/"><h3 class="stm-font">Code Quiz Challenge</h3></a>
               <p>If you want to test out your knowledge of JavaScript? Come take a well-made quiz here with <strong>Jun's Code Quiz</strong></p>
-              <a href="https://github.com/zzangu0215/BootCamp-Homework4-Code_Quiz"><h4 class="stm-font">Github Repository</h4></a>
+              <a href="https://github.com/zzangu0215/Code_Quiz_Challenge"><h4 class="stm-font">Github Repository</h4></a>
             </div>
           </div>
         </div><!--end element 3-->
@@ -152,9 +152,9 @@
           <div  class="thumbnail shadow up-hover">
             <img src="./images/workday_scheduler.PNG"/> 
             <div class="cust-caption">
-              <a href="https://zzangu0215.github.io/BootCamp-Homework5-Work_Day_Scheduler/"><h3 class="stm-font">Workday Scheduler</h3></a>
+              <a href="https://zzangu0215.github.io/Work_Day_Scheduler/"><h3 class="stm-font">Workday Scheduler</h3></a>
               <p>If you want to organize your daily schedule? Come to my <strong>Work Day Scheduler</strong> to put your schedules!</p>
-              <a href="https://github.com/zzangu0215/BootCamp-Homework5-Work_Day_Scheduler"><h4 class="stm-font">Github Repository</h4></a>
+              <a href="https://github.com/zzangu0215/Work_Day_Scheduler"><h4 class="stm-font">Github Repository</h4></a>
             </div>
           </div>
         </div><!--end element 4-->
