Minor things changed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <nav>
             <ul class="list-inline links ">
               <li><a class="btn btn-default btn-lg" href="https://github.com/zzangu0215" title="Jun on Github" target="_blank"><i class="fa fa-github"></i></a></li>
-              <li><a class="btn btn-default btn-lg" href="https://www.linkedin.com/in/jun-park-14a548178/"  title="EmAnt on DeviantArt" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a class="btn btn-default btn-lg" href="https://www.linkedin.com/in/jun-park-14a548178/"  title="Jun LinkedIn" target="_blank"><i class="fa fa-linkedin"></i></a></li>
               <li><a class="btn btn-default btn-lg" href="https://www.instagram.com/o0ojunny/"  title="Jun on Instagram" target="_blank"><i class="fa fa-instagram"></i></a></li>
             </ul>		
           </nav>
@@ -165,7 +165,7 @@
     <footer id="links" class="main-nav stm-font dark-bg">
       <div class="container">
         <div class="col-sm-8  center">
-            <img id="flogo" src="./images/jun_logo.jpg" alt="logo: EmAnt" title="logo" width="150px"/>
+            <img id="flogo" src="./images/jun_logo.jpg" alt="Jun Logo" title="logo" width="150px"/>
             <p>Contact Me @ <a href="mailto:mail@example.com">tajo0215@gmail.com</a></p>
             <p>Copyright &copy; 2021 by <a href="https://www.instagram.com/o0ojunny/" target="_blank">Junny Zzangu</a></p>
         </div>
